aster/tests/fail/continue_outside_loop.as
# Expected: compile failure (`continue` outside loop)

def main() returns i32
    continue
    return 0

